Update Google Analytics ID to G-3Q7BYMC575 and clean up debug code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite + React</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZB3F0XHMKX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Q7BYMC575"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -17,10 +17,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-ZB3F0XHMKX');
-
-        // Debug: Log when GA4 is loaded (for testing purposes)
-        console.log('Google Analytics 4 (GA4) tracking initialized with ID: G-ZB3F0XHMKX');
+        gtag('config', 'G-3Q7BYMC575');
     </script>
 </head>
 
